--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "build": "tsc",
+    "dev": "ts-node-dev ./src/index.ts",
+    "start": "node ./build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,11 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongoose": "^6.3.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "ts-node-dev": "^1.1.8",
+    "tsc": "^2.0.4",
+    "typescript": "^4.6.4"
   }
 }
